Fix spacing of logos in archive on small screen
There was a missing margin between the OWID logo and the affiliate logos
on archive site on a small screen introduced in 0324820c2.

We can simplify the code, but the change introduces smaller margin
between the OWID logo and the affiliate logos on live site on a single
size, which probably wasn't even intentional, since the margin is
smaller on both smaller and larger screen sizes.

--- a/site/SiteLogos.scss
+++ b/site/SiteLogos.scss
@@ -4,14 +4,6 @@
     justify-content: space-between;
     flex-shrink: 0;
 
-    .logo-owid {
-        margin-right: 24px;
-
-        @include sm-only {
-            margin-right: 0;
-        }
-    }
-
     .logo-owid a {
         @include md-up {
             font-size: 20px;
@@ -30,6 +22,7 @@
         @include column-gap(6px);
         align-items: flex-start;
         margin-top: 5px;
+        margin-left: 24px;
 
         a {
             color: white;
